# python-project-50

./: .gitignore  Makefile  README.md  coverage.lcov  pyproject.toml
.github/workflows/: gradle.yml  main.yml
formats/: json_format.py  plain.py  stylish.py
gendiff/: __init__.py  build_diff.py  cli.py  consts.py  file_parser.py  file_reader.py  gendiff.py  generate_diff.py
gendiff/formats/: stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_gendiff_json.py
tests/fixtures/: read_fixtures.py
