[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dana Senko <danaaasenko@gmail.com>"]
readme = "README.md"
packages = [
    { include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'