[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dana Senko <danaaasenko@gmail.com>"]
readme = "README.md"
packages = [
    { include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
pyyml = "^0.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
ruff = "^0.7.2"
pytest = "^8.3.3"
codeclimate-test-reporter = "^0.2.3"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'
